@@ -1,3 +1,9 @@
+2010-06-24  Romain Francois <romain@r-enthusiasts.com>
+
+	* inst/include/Rcpp/vector/RangeIndexer.h: factored the RangeIndexer class
+	out of Vector, so that we can at a later time specialize it for character
+	vectors, lists, etc ...
+
 2010-06-24  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/Rcpp/Date.h: add struct tm member variable and
